tests/snapshots/examples_fixtures/type_system__failing__159_match_nested_tuple_mixed_shape_non_exhaustive.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/159_match_nested_tuple_mixed_shape_non_exhaustive.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `mystery_value`.

  examples/type_system/failing/159_match_nested_tuple_mixed_shape_non_exhaustive.flx:74:13
   |
74 |     let w = mystery_value
   |             ^^^^^^^^^^^^^

Hint:
  Define it first: let mystery_value = ...;


error[E300]: Type Mismatch

I found a type mismatch.

  examples/type_system/failing/159_match_nested_tuple_mixed_shape_non_exhaustive.flx:75:14
   |
75 |     let _x = match w {
   |              ^^^^^^^^^
76 |         W((1, 2)) -> 1,
   | ^^^^^^^^^^^^^^^^^^^^^^^
77 |         W(1) -> 2,
   | ^^^^^^^^^^^^^^^^^^
78 |         Z -> 0,
   | ^^^^^^^^^^^^^^^
79 |     }
   | ^^^^^

Note:
  expected type: (Int, Int)
  found type: Int
  the conflicting types meet at this expression

Help:
  These two types are not compatible.


error[E015]: Non-Exhaustive Match

Match is not exhaustive: 1 missing pattern.

  examples/type_system/failing/159_match_nested_tuple_mixed_shape_non_exhaustive.flx:75:14
   |
75 |     let _x = match w {
   |              ^^^^^^^^^
76 |         W((1, 2)) -> 1,
   | ^^^^^^^^^^^^^^^^^^^^^^^
77 |         W(1) -> 2,
   | ^^^^^^^^^^^^^^^^^^
78 |         Z -> 0,
   | ^^^^^^^^^^^^^^^
79 |     }
   | ^^^^^

Hint:
  Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.

Found 3 errors.
== stdout ==
<not executed>
